0026522: Exception while copying offset on C0 surface